[gd_scene load_steps=9 format=3 uid="uid://irjrthrlapp7"]

[ext_resource type="Script" path="res://hooks/state_hook.gd" id="1_k50ys"]
[ext_resource type="Script" path="res://world/world.gd" id="1_pvxfe"]
[ext_resource type="TileSet" uid="uid://ch2emyu4h73qt" path="res://world/world_tileset.tres" id="3_anjuj"]
[ext_resource type="PackedScene" uid="uid://c1cidvt2cnx1a" path="res://world/worldgen/worldgen.tscn" id="4_kb0g1"]
[ext_resource type="Texture2D" uid="uid://bvt36rt0k4b4b" path="res://world/sky_noise.tres" id="5_i83ji"]
[ext_resource type="Script" path="res://world/sky.gd" id="5_ksuj7"]
[ext_resource type="Environment" uid="uid://6mfps4oaxxe2" path="res://world/environment.tres" id="6_oboch"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_eapv2"]
frequency = 0.5

[node name="World" type="Node2D"]
script = ExtResource("1_pvxfe")
scatter_noise = SubResource("FastNoiseLite_eapv2")
scatter_frequency = 0.35

[node name="StateHook" type="Node" parent="."]
script = ExtResource("1_k50ys")

[node name="Worldgen" parent="." instance=ExtResource("4_kb0g1")]

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("3_anjuj")
format = 2
layer_0/name = "ground"
layer_1/name = "food"
layer_1/enabled = true
layer_1/modulate = Color(1.3, 1.3, 1.3, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array()
layer_2/name = "powerup"
layer_2/enabled = true
layer_2/modulate = Color(1.3, 1.3, 1.3, 1)
layer_2/y_sort_enabled = false
layer_2/y_sort_origin = 0
layer_2/z_index = 2
layer_2/tile_data = PackedInt32Array()

[node name="Sky" type="PointLight2D" parent="."]
top_level = true
z_index = 1000
z_as_relative = false
scale = Vector2(100, 100)
texture = ExtResource("5_i83ji")
script = ExtResource("5_ksuj7")

[node name="Tint" type="CanvasModulate" parent="."]
color = Color(0.282353, 0.254902, 0.254902, 1)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("6_oboch")

[connection signal="initialized" from="StateHook" to="." method="_on_state_hook_initialized"]
[connection signal="updated" from="StateHook" to="." method="_on_state_hook_updated"]
